--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,6 +3,8 @@ name: deploy-container
 on:
   push:
     branches: ["master"]
+    paths:
+      - "packages/container/**"
   pull_request:
     branches: ["master"]
     paths:
